[package]
name = "my_first_app"
version = "0.1.0"
authors = ["'SanKRP2207' <'sandeepkumarpal281@gmail.com'>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["router"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
